# AI_rust

./: .dockerignore  .gitignore  COMPILATION_FIXES_SUMMARY.md  CONTRIBUTING.md  Cargo.lock.backup  Cargo.toml  DEPENDENCY_UPDATE_REPORT_2025.md  DEPENDENCY_UPGRADE_PLAN_2025_10_15.md  DEPENDENCY_UPGRADE_REPORT_2025_09_28.md  DEPENDENCY_UPGRADE_REPORT_2025_10_15.md  DEVOPS_COMPLETION_REPORT.md  Dockerfile  FINAL_ACHIEVEMENTS.md  FINAL_PROJECT_STATUS_2025.md  IMPROVEMENT_EXECUTION_SUMMARY.md  MONITORING_DASHBOARD_UPGRADE_REPORT.md  OVERALL_PROGRESS_SUMMARY_2025_12_03.md  PROJECT_ADVANCEMENT_REPORT_2025.md  PROJECT_ADVANCEMENT_REPORT_2026_03_06.md  PROJECT_ADVANCEMENT_REPORT_2026_03_06_PHASE2.md  PROJECT_ADVANCEMENT_REPORT_2026_03_06_PHASE3.md  PROJECT_COMPLETION_REPORT_2025.md  PROJECT_IMPROVEMENT_PLAN_2025.md  PROJECT_PROGRESS_SUMMARY_2025_12_03.md  PROJECT_STATUS_SUMMARY_2025.md  PROJECT_STATUS_UPDATE_2025_10_15.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RUST_190_AI_ADVANCEMENT_REPORT_2025.md  RUST_194_UPGRADE_REPORT.md  UPGRADE_COMPLETION_SUMMARY.md  WEEK1_COMPLETION_REPORT.md  WEEK2_COMPLETION_REPORT.md  WEEK3_COMPLETION_REPORT.md  WEEK4_COMPLETION_REPORT.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  reports.yml
courses/ai-with-rust/: SYLLABUS.md
courses/rust/: SYLLABUS.md
crates/c01_base/: Cargo.toml
crates/c01_base/src/: lib.rs
crates/c02_data/: Cargo.toml
crates/c02_data/src/: lib.rs
crates/c03_ml_basics/: Cargo.toml
crates/c04_dl_fundamentals/: Cargo.toml
crates/c05_nlp_transformers/: Cargo.toml
crates/c05_nlp_transformers/examples/: README.md
crates/c05_nlp_transformers/src/: lib.rs
crates/c06_retrieval_tools/: Cargo.toml
crates/c07_agents_systems/: Cargo.toml
crates/c07_agents_systems/src/: lib.rs
crates/c08_serving_ops/: Cargo.toml
crates/c08_serving_ops/src/: candle_engine.rs  engine.rs  lib.rs  metrics.rs  middleware.rs
crates/c08_serving_ops/tests/: http_smoke.rs  simple_route_test.rs
crates/c09_ai/: COMPILATION_FIXES_SUMMARY.md  COMPREHENSIVE_PROJECT_ADVANCEMENT_REPORT_2025.md  Cargo.toml  README.md
crates/c09_ai/docs/: OVERVIEW.md  README.md
crates/c09_ai/docs/ai_ml_topics/: README.md
crates/c09_ai/docs/ai_ml_topics/00_latest_2025_updates/: README.md
crates/c09_ai/docs/ai_ml_topics/08_performance_optimization/: README.md
crates/c09_ai/examples/: advanced_ai_features.rs  agentic_web_architecture.rs  benchmark_suite_showcase.rs  memory_optimization_showcase.rs  model_serving_showcase.rs  modern_ai_showcase.rs  monitoring_dashboard_showcase.rs  multimodal_ai_processing.rs  performance_optimization.rs  rust_190_ai_features.rs  wasm_ai_inference.rs
crates/c09_ai/src/: lib.rs  logging.rs
crates/c09_ai/src/auth/: manager.rs
crates/c09_ai/src/benchmarks/: mod.rs
crates/c09_ai/src/cache/: manager.rs
crates/c09_ai/src/config/: manager.rs  schema.rs  validation.rs
crates/c09_ai/src/database/: connection.rs  entities.rs  orm.rs  schema.rs  transaction.rs
crates/c09_ai/src/gpu/: mod.rs
crates/c09_ai/src/inference/: engine.rs
crates/c09_ai/src/machine_learning/: mod.rs
crates/c09_ai/src/memory/: mod.rs
crates/c09_ai/src/messaging/: manager.rs
crates/c09_ai/src/model_management/: registry.rs  storage.rs
crates/c09_ai/src/model_serving/: mod.rs
crates/c09_ai/src/monitoring/: mod.rs
crates/c09_ai/src/neural_networks/: mod.rs
crates/c09_ai/src/storage/: local.rs  manager.rs
crates/c09_ai/src/training/: job.rs  pipeline.rs
crates/c09_ai/src/validation/: schema.rs
crates/c09_ai/src/websocket/: handler.rs  manager.rs
crates/c09_ai/tests/: integration_tests.rs  performance_tests.rs
data/: README.md  qa.example.jsonl
data/index/: README.md
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENT_EXPANSION_COMPLETION_REPORT.md  DOCUMENT_STRUCTURE.md  QUICK_START.md  README.md  USER_MANUAL.md  ai_rust_landscape.md  assessment_rubrics.md  curricula_2025.md  foundations.md  project_templates.md  reading_list.md  research_watch.md  rust_ai_practice_guide.md  taxonomy_2025.md
docs/01_authority_frameworks/: 2025_ai_core_principles_analysis.md  2025_ai_rust_authority_topic_structure.md  2025_ai_rust_comprehensive_authority_framework.md  2025_international_authority_topic_structure.md
docs/02_knowledge_structures/: 2025_ai_knowledge_framework.md  2025_ai_rust_comprehensive_knowledge_framework.md  2025_ai_知识术语表_GLOSSARY.md  2025_knowledge_index.md  2025_knowledge_landscape.md  GLOSSARY.md  glossary_index.csv
docs/03_tech_trends/: 2025_ai_rust_tech_landscape.md  2025_ai_rust_technology_trends_comprehensive_report.md  2025_tech_architecture_diagram.md  2025_tech_trends_update.md
docs/04_learning_paths/: 2025_ai_rust_learning_path.md  2025_learning_path_best_practices.md  ai_learning_path.md
docs/05_practical_guides/: 2025_rust_ai_practical_guide.md  ai_algorithms_deep_dive.md  foundations.md  performance_optimization_guide.md  rust_ai_best_practices.md  rust_ai_practice_guide.md
docs/06_research_analysis/: 2025_ai_research_papers_analysis.md  reading_list.md  research_watch.md
docs/07_project_management/: 2025_ai_rust_knowledge_framework_summary.md  2025_knowledge_consolidation_summary.md  2025_multi_task_progress_summary.md  multi_task_progress_summary.md
docs/08_legacy_docs/: 2025_ai_rust_comprehensive_framework.md  2025_ai_rust_latest_trends.md  2025_comprehensive_tech_update.md  2025_knowledge_framework_summary.md  2025_tech_trends_index.md  2025_tech_updates.md  2025_web_ai_rust_completion_report.md  2025_web_ai_rust_consolidation.md  (+10 more)
improvement_tracking/: execution_checkpoints.md  quality_metrics.md  weekly_progress.md
monitoring/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
notes/: README.md  development_log.md  final_status.md
plans/: MASTER_PLAN.md  SPRINT_01.md
reports/: README.md  performance_baseline.md
scripts/: demo_rust_190.ps1  demo_rust_190.sh  deploy.ps1  deploy.sh  init-db.sql
src/: engine.rs  lib.rs  main.rs
tests/: http_smoke.rs  integration_tests.rs
tools/: update_knowledge_checklist.md
(+32 files in other folders)
